examples/test/testpolicy3505.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3505
  namespace: namespace309
spec:
  podSelector:
    matchLabels:
      key32: value26
      key11: value44
      key29: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value31
      podSelector:
        matchLabels:
          key38: value33
          key26: value30
          key23: value26
